# AxiomR

./: .gitignore  CMakeLists.txt
assets/Gas Tank/: Gas Tank.mtl
include/: IShader.hpp  camera.hpp  frame_arena.hpp  framebuffer.hpp  math.hpp  mesh.hpp  pipeline.hpp  renderer.hpp  shader_interface.hpp  texture.hpp  thread_pool.hpp  tiled_pipeline.hpp  timer.hpp  vec.hpp  window.hpp  windows_bitmap.hpp
include/shaders/: shaders.hpp
src/: CMakeLists.txt  camera.cpp  frame_arena.cpp  framebuffer.cpp  main.cpp  math.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  texture.cpp  thread_pool.cpp  tiled_pipeline.cpp  vec.cpp  window.cpp  windows_bitmap.cpp
